# jolt-ncp

./: Cargo.toml  EXPLANATION.md  NOTES.md  command.txt
deb_elfs/: guestWithCkb  guestWithoutCkb
docs/: quick-ckb-jolt-memory-shim.md  state.json
docs/problems/: fix-ppoll-zeroos.md  illegal-device-store-0x0.md  musl-boot-syscalls.md
forks/ckb-vm-asm/: Cargo.toml  Makefile  build.rs  deny.toml
forks/ckb-vm-asm/.github/ISSUE_TEMPLATE/: design.md
forks/ckb-vm-asm/.github/workflows/: develop.yml  release.yml
forks/ckb-vm-asm/benches/: bits_benchmark.rs
forks/ckb-vm-asm/definitions/: Cargo.toml
forks/ckb-vm-asm/definitions/src/: asm.rs  generate_asm_constants.rs  instructions.rs  lib.rs
forks/ckb-vm-asm/examples/: check_real_memory.rs  ckb_vm_runner.rs
forks/ckb-vm-asm/fuzz/: Cargo.toml
forks/ckb-vm-asm/fuzz/fuzz_targets/: asm.rs  interpreter.rs  isa_a.rs  isa_b.rs  snapshot.rs  snapshot2.rs
forks/ckb-vm-asm/src/: cost_model.rs  debugger.rs  decoder.rs  elf.rs  lib.rs  rng.rs  snapshot.rs  snapshot2.rs
forks/ckb-vm-asm/src/instructions/: a.rs  b.rs  execute.rs  i.rs  m.rs  mod.rs  register.rs  rvc.rs  tagged.rs
forks/ckb-vm-asm/src/machine/: mod.rs  trace.rs
forks/ckb-vm-asm/src/machine/asm/: cdefinitions_generated.h  execute_aarch64.S  execute_riscv64.S  execute_x64.S  mod.rs  traces.rs
forks/ckb-vm-asm/src/memory/: flat.rs  mod.rs  sparse.rs  wxorx.rs
forks/ckb-vm-asm/src/syscalls/: mod.rs
forks/ckb-vm-asm/tests/: machine_build.rs  test_a_extension.rs  test_artifact.rs  test_asm.rs  test_auipc_fusion.rs  test_b_extension.rs  test_dy_memory.rs  test_minimal.rs  test_misc.rs  test_mop.rs  test_reset.rs  test_resume.rs  test_resume2.rs  test_signal_pause.rs  test_simple.rs  test_versions.rs
forks/ckb-vm-asm/tests/artifact/arch/: add-01.elf  add.uw-01.elf  addi-01.elf  addiw-01.elf  addw-01.elf  and-01.elf  andi-01.elf  andn-01.elf  auipc-01.elf  beq-01.elf  bext-01.elf  bexti-01.elf  bge-01.elf  bgeu-01.elf  binv-01.elf  blt-01.elf  bltu-01.elf  bne-01.elf  cadd-01.elf  caddi-01.elf  caddi16sp-01.elf  caddi4spn-01.elf  caddiw-01.elf  caddw-01.elf  candi-01.elf  cbnez-01.elf  cebreak-01.elf  cj-01.elf  cjalr-01.elf  cjr-01.elf  cld-01.elf  cldsp-01.elf  cli-01.elf  clmul-01.elf  clui-01.elf  clwsp-01.elf  cmv-01.elf  cnop-01.elf  cor-01.elf  cpop-01.elf  (+66 more)
forks/ckb-vm-asm/tests/artifact/cryptography/: ed25519_ckbvm  k256_ecdsa_ckbvm  k256_schnorr_ckbvm  p256_ckbvm  rsa_ckbvm  secp256k1_ecdsa_ckbvm  secp256k1_schnorr_ckbvm  sphincsplus_ref_ckbvm
forks/ckb-vm-asm/tests/artifact/spec/: rv64ua-u-amoadd_d  rv64ua-u-amoadd_w  rv64ua-u-amoand_d  rv64ua-u-amoand_w  rv64ua-u-amomax_d  rv64ua-u-amomax_w  rv64ua-u-amomaxu_d  rv64ua-u-amomaxu_w  rv64ua-u-amomin_d  rv64ua-u-amomin_w  rv64ua-u-amominu_d  rv64ua-u-amominu_w  rv64ua-u-amoor_d  rv64ua-u-amoor_w  rv64ua-u-amoswap_d  rv64ua-u-amoswap_w  rv64ua-u-amoxor_d  rv64ua-u-amoxor_w  rv64ua-u-lrsc  rv64uc-u-rvc  rv64ui-u-add  rv64ui-u-addi  rv64ui-u-addiw  rv64ui-u-addw  rv64ui-u-and  rv64ui-u-andi  rv64ui-u-auipc  rv64ui-u-beq  rv64ui-u-bge  rv64ui-u-bgeu  rv64ui-u-blt  rv64ui-u-bltu  rv64ui-u-bne  rv64ui-u-jal  rv64ui-u-lb  rv64ui-u-lbu  rv64ui-u-ld  rv64ui-u-lh  rv64ui-u-lhu  rv64ui-u-lui  (+43 more)
forks/ckb-vm-asm/tests/programs/: _build_all_native.sh  nop64  nop_loop  nop_loop.S
guest/: Cargo.toml
guest/src/: exec_syscall_handler.rs  executor.rs  jolt_memory.rs  lib.rs
src/: cli.rs  collect_vm_creation.rs  collect_vm_syscalls.rs  config.rs  lib.rs  macros.rs  main.rs  rpc_client.rs  tx_converter.rs  type_id.rs  vefier_context.rs
src/types/: error.rs  guest_output_types.rs  mod.rs  ncp_types.rs  types.rs
