[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[features]
guest = []

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/ERoydev/jolt", branch = "fork/jolt-rev", features = [
    "guest-std",
    # "malloc-shim", # defines malloc, free, calloc, relloc as no_mangle extern "C" functions that can be called from C code (e.g. CKB-VM syscalls)
    # malloc-shim is a workaround you don't need. The real fix is stopping ckb-std from injecting its malloc.
    # "thread",
    # "stdout",
    # "debug",
] }
serde = { version = "1.0", features = ["derive"] }

# ckb
# ckb-hash = { version = "1.0.1", default-features = false, features = [
#     "ckb-contract",
# ] }
ckb-vm = "0.24.14"
ckb-vm-fuzzing-utils = "1.0.0"
protobuf-ckb-syscalls = "1.0.0"
