[package]
name = "ckb-vm"
description = "CKB's Virtual machine"
version = "0.24.0"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2024"
rust-version = "1.92.0"
build = "build.rs"
exclude = ["/benches", "/tests"]
homepage = "https://github.com/nervosnetwork/ckb-vm"
repository = "https://github.com/nervosnetwork/ckb-vm"

[features]
default = []
# Require asm feature, generates an error if asm cannot be enabled.
asm = []
# Detect if requirements are met, and enable asm feature when we can.
detect-asm = []
enable-chaos-mode-by-default = ["ckb-vm-definitions/enable-chaos-mode-by-default"]
# Disable slow tests to run miri on CI
miri-ci = []
pprof = []

[dependencies]
byteorder = "1"
bytes = "1"
goblin_v023 = { package = "goblin", version = "=0.2.3" }
goblin_v040 = { package = "goblin", version = "=0.4.0" }
scroll = "0.10"
serde = { version = "1.0", features = ["derive"] }
ckb-vm-definitions = { path = "definitions", version = "=0.24.0" }
derive_more = { version = "1", features = ["full"] }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
argparse = "0.2"
criterion = "0.5.1"
proptest = "1.5.0"
buddy-alloc = "0.6.0"

[[bench]]
name = "bits_benchmark"
path = "benches/bits_benchmark.rs"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(has_asm)'] }
