[package]
name = "ckb-vm-definitions"
description = "Common definition files for CKB VM"
version = "0.24.0"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2024"
rust-version = "1.92.0"
autobins = false
homepage = "https://github.com/nervosnetwork/ckb-vm"
repository = "https://github.com/nervosnetwork/ckb-vm"

[features]
enable-chaos-mode-by-default = []

[[bin]]
name = "generate_asm_constants"
path = "src/generate_asm_constants.rs"

[dependencies]
paste = { package = "pastey", version = "0.2.1" }
